# DPS50xx

./: .cproject  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3
.github/workflows/: release.yml
frontend/: package.json  pnpm-lock.yaml
frontend/src/components/: AppSidebar.tsx
frontend/src/hooks/: use-dps5020.ts  use-latest-release.ts
frontend/src/lib/: backend.ts  version.ts
frontend/src/pages/: FirmwarePage.tsx  HomePage.tsx  SettingsPage.tsx
main/: CMakeLists.txt  Commands.h  DPS5020.h  ft800.cpp  ft800.h  idf_component.yml  main.cpp
main/Application/: ApplicationContext.h  ServiceProvider.h
main/Application/CommandManager/: CommandManager.cpp  CommandManager.h
main/Application/DeviceManager/: DPS5020.cpp  DPS5020.h  DeviceManager.cpp  DeviceManager.h
main/Application/HomeAssistantManager/: HomeAssistantManager.cpp  HomeAssistantManager.h
main/Application/LogManager/: LogManager.cpp  LogManager.h
main/Application/MqttManager/: MqttManager.cpp  MqttManager.h
main/Application/NetworkManager/: NetworkManager.cpp  NetworkManager.h  WiFiInterface.cpp  WiFiInterface.h
main/Application/SettingsManager/: SettingsDefs.h
main/controls/: button.h  control.h
main/displays/: FT800.cpp  FT800.h
main/displays/ft800Lib/: ft800lib.cpp  ft800lib.h
main/drawing/: color.h  graphics.h  pen.h  rectangle.h
main/hardware/: BoardConfig.h
main/lib/communication/modbus/: ModbusClient.h  ModbusError.h  ModbusMaster.cpp  ModbusMaster.h  ModbusPdu.cpp  ModbusPdu.h  ModbusRtuClient.cpp  ModbusRtuClient.h  modbus.h
main/lib/rtos/: Task.h
